fix: next 기본 dark mode 스타일 삭제

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,16 +15,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
-
 .css-tbudox {
   margin: auto;
 }
